Yaml/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: ingress
  annotations:
    #nginx.ingress.kubernetes.io/upstream-hash-by: "true"
    nginx.ingress.kubernetes.io/group.name: "ssgpang"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
