Yaml/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/group.name: "ssgpang"
spec:
  ingressClassName: nginx
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
